--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.2.0'
     def lifecycle_version = "2.2.0"
     def arch_version = "2.1.0"
 
