adding movie rating feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
+    implementation 'com.google.android.material:material:1.2.0'
 
 
 }
